--- a/stylesheet.css
+++ b/stylesheet.css
@@ -49,7 +49,6 @@ table {
 
 html, body {
 	max-width: 100%;
-	/*overflow-x: hidden;*/
 }
 
 div {
@@ -221,4 +220,10 @@ p {
 #container-seven p:nth-last-child(1) {
 	font-family: "Droid Serif";
 	font-style: italic;
+}
+
+@media (max-width: 480px) {
+	div {
+		padding: 60px;
+	}
 }
